--- a/EXPERIMENT_11_larger_crop_size/config/curve_config.json
+++ b/EXPERIMENT_11_larger_crop_size/config/curve_config.json
@@ -12,7 +12,7 @@
     {
       "stage_id": 1,
       "name": "Stage1_Foundations",
-      "episodes": 6000,
+      "episodes": 1,
       "learning_rate": 1e-4,
       "curve_generation": {
         "width_range": [3, 5],
@@ -32,7 +32,7 @@
     {
       "stage_id": 2,
       "name": "Stage2_Variability",
-      "episodes": 10000,
+      "episodes": 1,
       "learning_rate": 1e-4,
       "curve_generation": {
         "width_range": [2, 6],         
@@ -57,7 +57,7 @@
     {
       "stage_id": 3,
       "name": "Stage3_Robustness_Complex",
-      "episodes": 15000,
+      "episodes": 1,
       "learning_rate": 5e-5,
       "curve_generation": {
         "width_range": [1, 4],         
@@ -83,7 +83,7 @@
     {
       "stage_id": 4,
       "name": "Stage4_Master_Generalization",
-      "episodes": 30000,
+      "episodes": 1,
       "learning_rate": 2e-5,
       "curve_generation": {
         
@@ -115,7 +115,7 @@
 {
   "stage_id": 5,
   "name": "Stage5_Branching_Easy",
-  "episodes": 12000,
+  "episodes": 1,
   "learning_rate": 1e-5,
   "curve_generation": {
     "width_range": [2, 3],
@@ -138,7 +138,7 @@
 {
   "stage_id": 6,
   "name": "Stage6_Branching_Wavy",
-  "episodes": 18000,
+  "episodes": 1,
   "learning_rate": 5e-6,
   "curve_generation": {
     "width_range": [1, 4],
@@ -164,7 +164,7 @@
 {
   "stage_id": 7,
   "name": "Stage7_Branching_Full_Realism",
-  "episodes": 25000,
+  "episodes": 1,
   "learning_rate": 2e-6,
   "curve_generation": {
     "width_range": [1, 3],
@@ -193,23 +193,25 @@
 },
 {
   "stage_id": 8,
-  "name": "Stage8_Satellite_Expert",
-  "episodes": 40000,
+  "name": "Stage8_Thin_Line_Specialist",
+  "episodes": 1,
   "learning_rate": 1e-5,
   "curve_generation": {
-    "width_range": [2, 5],
-    "curvature_range": [0.0, 1.2],
-    "min_intensity": 0.2, 
+    "width_range": [1, 2],       
+    "curvature_range": [0.0, 1.4],
+    "min_intensity": 0.3,        
     "max_intensity": 0.8,
+    "background_intensity_range": [0.0, 0.2],
     "noise_prob": 1.0,           
-    "noise_range": [0.2, 0.5],   
+    "noise_range": [0.1, 0.25],   
     "num_distractors": 4,       
     "branches": true,
     "allow_self_cross": true
   },
   "training": { 
     "tissue": true, 
-    "mixed_start": true 
+    "mixed_start": true,
+    "strict_stop": true 
   }
 }
 
